...
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/yearsEXP">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
...
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_3_years" />

                <RadioButton
                    android:id="@+id/yearsOption2"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_6_years" />

                <RadioButton
...
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/availability">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Only day"
                    android:padding="5dp"
                    />

                <RadioButton android:id="@+id/avalibityOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Only night"
                    android:padding="5dp"
                    />

...
    <EditText
        android:layout_width="80sp"
        android:layout_height="30sp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/expectedwage"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
...

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="Apply"
            android:id="@+id/apply"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:background="@drawable/roundedbtn"
...
