...
                    android:layout_weight="50">

                    <Button
                        android:text="@string/main_menu_add_job"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/btn_addjob" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...
